// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Components/Dialogue Basic Dialogue 1`] = `
<button
  className="sc-AxiKw jFZIbG"
  data-testid={null}
  disabled={false}
  onClick={[Function]}
>
  <span
    className="Icon__IconWrapper-xeqnbo-0 jCcgAV"
  >
    <svg
      className="svg-inline--fa fa-undefined"
    />
  </span>
  Delete data
</button>
`;

exports[`Storyshots Components/Dialogue Edit Dialogue 1`] = `
<button
  className="sc-AxiKw hELyNG"
  data-testid={null}
  disabled={false}
  onClick={[Function]}
>
  <span
    className="Icon__IconWrapper-xeqnbo-0 jCcgAV"
  >
    <svg
      className="svg-inline--fa fa-undefined"
    />
  </span>
  Modify Details
</button>
`;
